# fastapi-cli

./: .coveragerc  LICENSE  README.md  pyproject.toml
fastapi_cli/: cli.py  init.py
fastapi_cli/command/init/: _create_directory.py  _create_file.py  main.py
fastapi_cli/command/modules/: create.py  list.py  main.py
fastapi_cli/command/modules/submodules/: create.py  create_router.py  main.py
fastapi_cli/command/modules/submodules/utils/: create_router.py  delete_router.py
fastapi_cli/command/routers/: create.py  main.py
fastapi_cli/command/run/: main.py
fastapi_cli/command/schemas/: create.py  delete.py  list.py  main.py  update.py
fastapi_cli/default_archi/: main.py
fastapi_cli/default_archi/api/: routers.py
fastapi_cli/default_archi/api/v1/: router.py
fastapi_cli/default_archi/core/: config.py
fastapi_cli/default_archi/db/: session.py
fastapi_cli/utils/: globals.py
fastapi_cli/utils/config/: config.py
tests/: __init__.py  test_init.py  test_module_create.py  test_schema_create.py  test_schema_delete.py  test_schema_list.py  test_schema_update.py
